--- a/bahasa.html
+++ b/bahasa.html
@@ -13,7 +13,7 @@
             <h1>SILAHKAN PILIH BAHASA ANDA</h1>
             <p>______________________________________________</p>
             <h1 class="mt-10">PLEASE SELECT YOUR LANGUAGE</h1>
-            <div class="text-right font-bold px-28">
+            <div class="text-right font-bold px-80 mt-12">
                 <a href="#">
                 <p>INDONESIA-></p>
             </a>
