--- a/bahasa.html
+++ b/bahasa.html
@@ -13,8 +13,8 @@
             <h1>SILAHKAN PILIH BAHASA ANDA</h1>
             <p>______________________________________________</p>
             <h1 class="mt-10">PLEASE SELECT YOUR LANGUAGE</h1>
-            <div class="text-right font-bold px-80 mt-12">
-                <a href="#">
+            <div class="text-right font-bold px-80  py-12">
+                <a href="pin.html">
                 <p>INDONESIA-></p>
             </a>
                 <P class="mt-40">ENGLISH-></P>
