--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="mt-80">PLEASE INSERT YOUR CARD</h1>
     </div>
         <div class="mt-20 w-1/2">
-            <a href="#">
+            <a href="bahasa.html">
             <img src="/img/insert.png" alt="">
         </a>
         </div>
