--- a/ambilKartu.html
+++ b/ambilKartu.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Ambil Kartu</title>
 </head>
 <body class="bg-blue-700">
-    <div class="font-bold text-center text-white my-9 mT-14 text-3xl">
-        
+    <div>
+        <h1 class="text-white font-bold text-3xl text-center mt-16">SILAHKAN AMBIL KARTU ANDA</h1>
     </div>
+    <div class="flex justify-center mt-40">
+        <a href="index.html">
+        <img src="/img/ambil.png" alt="">
+        </a>
+    </div>
+    
 </body>
 </html>
