--- a/pin.html
+++ b/pin.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-blue-700 text-center">
-    <div class="flex mt-20 justify-center">
-      <div class="flex font-bold text-white text-center text-3xl mt-10 justify-center items-center">
-        <img class="w-1/2" src="/img/pin.png" alt="" />
-        <div class="w-1/2 space-y-20">
-          <h1>MASUKAN PIN</h1>
-          <form action="" onsubmit="">
-            <input class="text-black" type="password" id="pin" value="" />
-            <input type="submit" class="" value="ENTER" />
-          </form>
-          <h1>TEKAN 'ENTER' JIKA SELESAI<br />MEMASUKAN PIN</h1>
+    <title>PIN</title>
+</head>
+
+<body class="bg-blue-700">
+    <div class="flex justify-center mt-20">
+        <div class="flex text-center font-bold text-white text-3xl mt-10 justify-center items-center">
+            <img class="w-1/2" src="/img/pin.png" alt="">
+            <div class="w-1/2 space-y-20">
+                <h1>MASUKAN PIN</h1>
+                <form action="" onsubmit="pin()">
+                    <input class="text-black" type="password" id="NoPin" required>
+                    <input type="submit" class="" value="ENTER">
+                </form>
+                <h1>TEKAN 'ENTER' JIKA SELESAI<br>MEMASUKAN PIN</h1>
+            </div>
         </div>
-        <div class="mt-64">
-        </div>
-      </div>
     </div>
-  </body>
+</body>
+<script>
+    function pin() {
+        let pin = document.getElementById("NoPin").value;
+        console.info(pin);
+        if (pin == '123456') {
+            window.open('tunai.html', '_blank');
+            window.close();
+        } else {
+            alert ('pin yang anda masukan salah')
+        }
+    };
+</script>
 </html>
